Fixed forum commenting issue
